<resources>
    <string name="app_name">MoveAlarm</string>
    <string name="title_activity_intro">MoveAlarm</string>
    <string name="title_activity_create_account">MoveAlarm</string>
    <string name="title_activity_main">MoveAlarm</string>
    <string name="login">Sign in</string>
    <string name="create">Sign up</string>
    <string name="logfacebook">Log in with facebook</string>
    <string name="crefacebook">Create Account with facebook</string>
    <string name="login_text">Login with Move Alarm Account</string>
    <string name="create_text">Create Move Alarm Account</string>
    <string name="text_user">Username : </string>
    <string name="enter_user">Enter username</string>
    <string name="text_pass">Password : </string>
    <string name="text_repass">Re-password : </string>
    <string name="enter_pass">Enter password</string>
    <string name="enter_repass">Enter password again</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create__account_">Create Account</string>
    <string name="title_activity_login_">Login</string>
    <string name="title_activity_main_layout">MainLayoutActivity</string>
    <string name="setAlarm">Set Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_set__alarm_">Set_Alarm_Activity</string>
</resources>
