<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fatel.movealarm_v01.Create_Account_Activity"
    android:background="#ff781b">

    <Button
        android:id="@+id/fb_btn"
        android:textColor="#FFF5F5"
        android:textSize="17sp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:shadowColor="#919191"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/crefacebook"/>
    <TextView
        android:id="@+id/line"
        android:layout_below="@id/fb_btn"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="___________________________________"
        android:textSize="20sp"
        android:textColor="#010101" />

    <TextView
        android:id="@+id/login_text"
        android:layout_below="@id/line"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_text"
        android:textSize="22sp"
        android:textColor="#010101"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/uname_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_user"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />
        <EditText
            android:id="@+id/enter_username"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user"
            android:layout_marginLeft="34dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_draw"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pw_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname_block"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pass"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/enter_password"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:layout_marginLeft="35dp"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_draw"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/repw_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pw_block"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_repass"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/enter_repassword"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_repass"
            android:layout_marginLeft="8dp"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_draw"
            />
    </LinearLayout>

    <Button
        android:layout_below="@id/repw_block"
        android:text="@string/create"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFF5F5"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:shadowColor="#919191"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="createAccountAndLinkMain"
        />


</RelativeLayout>
